--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!--Navigation bar-->
    
-    <nav class="navbar navbar navbar-dark bg-dark sticky-top custom-navbar">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top custom-navbar">
         <div class="container-fluid" >
             
             <a class="navbar-brand" href="#"><img src="Images/logo-header.png" class="d-none d-md-block logo-img"></a>
